# wxMS

./: CMakeLists.txt  Inno.project  README.md  help.project  wsMsOptions.cpp  wxMS.cpp  wxMS.ini  wxMS.sln  wxMS.vcxproj  wxMS.vcxproj.filters  wxMS_wxcr_bitmaps.cpp  wxMS_wxcr_bitmaps.xrc  wxMs-Curl.wxcp  wxMsAboutDlg.project  wxMsAccountConf.cpp  wxMsAccountDetails.cpp  wxMsAccountDetailsh.h  wxMsAccounth.h  wxMsAccountsDialog.cpp  wxMsAccountsDialogh.h  wxMsBaseFrame.cpp  wxMsBaseFrame.h  wxMsBounceMsgs.cpp  wxMsCheck4Update.cpp  wxMsCheckInternet.cpp  wxMsCheckPopMail.cpp  wxMsClient.cpp  wxMsCmdline.cpp  wxMsCmdlineh.h  wxMsColSaveRestore.cpp  wxMsConfh.h  wxMsConfig.cpp  wxMsConnectTest.cpp  wxMsContextMenu.cpp  wxMsCrashHandler.cpp  wxMsCurlPop3AddHeader2MsgList.cpp  wxMsCurlPop3ExecuteCmd.cpp  wxMsCurlPop3GetMessages.cpp  wxMsCurlPop3ServerTest.cpp  wxMsCurlPop3UpdateListEvent.cpp  (+51 more)
Executables/: wxMS_Setup.md5  wxMS_exe.md5
Inno/: Inno.vcxproj  Inno.vcxproj.filters  setup.iss
Inno/scripts/: products.iss
Inno/scripts/products/: vcredist2010.iss
doc/: wxMS-Journal.odt  wxMS-Notes.odt  wxMS-Readme.txt  wxMs-Install.txt  wxMs-License.txt  wxMs-WhatsNew.txt
exeHdrLib/: exeDosHdr.cpp  exeDosHdrh.h  exeHdr.cpp  exeHdr.sln  exeHdr.vcxproj  exeHdr.vcxproj.filters  exeHeadersh.h  exeHeadstrh.h  exeLeHdr.cpp  exeLeHdrh.h  exeNeHdr.cpp  exeNeHdrh.h  exePeHdr.cpp  exePeHdrh.h
help/: help.vcxproj  help.vcxproj.filters  wxMsHelp.chm  wxMsHelp.hnd
mimetic/: body.cxx  contentdescription.cxx  contentdisposition.cxx  contentid.cxx  contenttransferencoding.cxx  contenttype.cxx  fieldparam.cxx  header.cxx  message.cxx  mimeentity.cxx  mimetic.vcxproj  mimetic.vcxproj.filters  mimeversion.cxx  strutils.cxx  utils.cxx  version.cxx
mimetic/codec/: base64.cxx  qp.cxx
mimetic/include/: body.h  contentdescription.h  contentdisposition.h  contentid.h  contenttransferencoding.h  contenttype.h  fieldparam.h  header.h  message.h  mimeentity.h  mimetic.h  mimeversion.h  streambufs.h  tokenizer.h  utils.h
mimetic/include/codec/: base64.h  code.h  codec.h  codec_chain.h  other_codecs.h  qp.h
mimetic/include/parser/: itparser.h
mimetic/include/rfc822/: address.h  addresslist.h  datetime.h  field.h  fieldvalue.h  group.h  header.h  mailbox.h  mailboxlist.h  message.h  messageid.h
mimetic/rfc822/: address.cxx  addresslist.cxx  datetime.cxx  field.cxx  fieldvalue.cxx  group.cxx  mailbox.cxx  mailboxlist.cxx  messageid.cxx  rheader.cxx  rmessage.cxx
rc/: default_icon.xpm  launch.xpm  mail.xpm  mail_delete.xpm  mail_get.xpm  mail_new.xpm  mail_send.xpm  wxMsr.rc
verLib/: fileVer.cpp  fileVerh.h  verLib.sln  verLib.vcxproj  verLib.vcxproj.filters  verlibDoc.txt
wxMsAbout/: CMakeLists.txt  wxMsAbout.vcxproj  wxMsAbout.vcxproj.filters  wxMsAboutDlg.cpp  wxMsAboutDlg.wxcp  wxMsAboutDlgBase.cpp  wxMsAboutDlgBase.h  wxMsAboutDlgBase_bitmaps.cpp  wxMsAboutDlgBase_bitmaps.xrc
wxMsFilter/: CMakeLists.txt  wxMsFilterConf.cpp  wxMsFilterConfh.h  wxMsFilterDialog.cpp  wxMsFilterDialog.vcxproj  wxMsFilterDialog.vcxproj.filters  wxMsFilterDialogh.h  wxMsFilterListh.h
wxMsOptionsDialog/: CMakeLists.txt  wxMsOptionDialogLog.cpp  wxMsOptions.vcxproj  wxMsOptions.vcxproj.filters  wxMsOptionsDialog.cpp  wxMsOptionsDialogBase.cpp  wxMsOptionsDialogBase.h  wxMsOptionsDialogBase_bitmaps.cpp  wxMsOptionsDialogh.h  wxMsOptionsSelectMailClient.cpp  wxMsOptionsw.wxcp
wxMsPop3Preview/: CMakeLists.txt  wxMsMessageExtractBody.cpp  wxMsPop3Preview.vcxproj  wxMsPop3Preview.vcxproj.filters
wxMsPop3Preview/codec/: charsetconv.cpp  charsetconv.h  rfc2047.cpp  rfc2047.h  rfc2231.cpp  rfc2231.h
wxMsUpdateCheck/: CMakeLists.txt  wxMsUpdateCheck.vcxproj  wxMsUpdateCheck.vcxproj.filters  wxMsUpdateCheck.wxcp  wxMsUpdateCheckBase.cpp  wxMsUpdateCheckBase.h  wxMsUpdateCheckBase_bitmaps.cpp  wxMsUpdateCheckCurl.cpp  wxMsUpdateCheckCurlh.h
wxMsVer/: wxMSversion.php
